# RTK

./: .clang-tidy  .gersemi.config  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CNAME  COPYRIGHT.TXT  CTestConfig.cmake  CTestCustom.cmake  CodeContribution.md  FindGengetopt.cmake  GettingStarted.md  HEADER.TXT  INSTALLATION.md  LICENSE.TXT  LICENSE.txt  ORGANIZATION.TXT  OS-SR-466.sh  OS-SR-466_build_rtk_in_itk.cmake  README.md  README.rst  README.txt  RTK.supp  RTKconfig.cmake.in  appveyor.yml  azure-pipelines-python.yml  azure-pipelines.yml  build_itk.sh  build_itk_gcc.sh  commit.sh  conf.py  cuda_kernel_util.cu  cuda_kernel_util.h  cuda_mem.cu  cuda_mem.h  cuda_util.cu  (+308 more)
applications/: CMakeLists.txt  README.md  rabbitct.h  rtk3Doutputimage_group.py  rtk3Doutputimage_section.ggo  rtk4Doutputimage_group.py  rtk4Doutputimage_section.ggo  rtkDbf.cxx  rtkDigisensGeometryXMLFileReader.cxx  rtkDigisensGeometryXMLFileReader.h  rtkVarianObiXMLFileReader.cxx  rtkVarianObiXMLFileReader.h  rtkVersion.ggo.in  rtkamsterdamshroud.cxx  rtkamsterdamshroud.ggo  rtkargumentparser.py  rtkbackprojections.cxx  rtkdigisensgeometry.cxx  rtkelektasynergygeometry.cxx  rtkfdk.cxx  rtkfdk.ggo  rtkfdktwodweights.cxx  rtkforwardprojections.cxx  rtkfovfilter.cxx  rtkfovfilter.ggo  rtkinlinefdk.cxx  rtkinlinefdk.ggo  rtkinputprojections_group.py  rtkinputprojections_section.ggo  rtkiterations_group.py  rtkiterations_section.ggo  rtknoise_group.py  rtknoise_section.ggo  rtkparkershortscanweighting.cxx  rtkphantomprojectionscreator.ggo  rtkprojections.cxx  rtkprojections.ggo  rtkprojectors_group.py  rtkprojectors_section.ggo  rtkrabbitct.cpp  (+19 more)
code/: CMakeLists.txt  ReadXim.m  itkFFTWCommon.cxx  itkFFTWComplexConjugateToRealImageFilter.h  itkFFTWRealToComplexConjugateImageFilter.h  rtkADMMTotalVariationConeBeamReconstructionFilter.h  rtkADMMTotalVariationConeBeamReconstructionFilter.hxx  rtkADMMTotalVariationConeBeamReconstructionFilter.txx  rtkADMMTotalVariationConjugateGradientOperator.h  rtkADMMTotalVariationConjugateGradientOperator.hxx  rtkADMMTotalVariationConjugateGradientOperator.txx  rtkADMMWaveletsConeBeamReconstructionFilter.h  rtkADMMWaveletsConeBeamReconstructionFilter.hxx  rtkADMMWaveletsConeBeamReconstructionFilter.txx  rtkADMMWaveletsConjugateGradientOperator.h  rtkADMMWaveletsConjugateGradientOperator.hxx  rtkADMMWaveletsConjugateGradientOperator.txx  rtkAdditiveGaussianNoiseImageFilter.h  rtkAdditiveGaussianNoiseImageFilter.hxx  rtkAdditiveGaussianNoiseImageFilter.txx  rtkAlvarez1976NegativeLogLikelihood.h  rtkAmsterdamShroudImageFilter.h  rtkAmsterdamShroudImageFilter.hxx  rtkAmsterdamShroudImageFilter.txx  rtkAverageOutOfROIImageFilter.h  rtkAverageOutOfROIImageFilter.hxx  rtkAverageOutOfROIImageFilter.txx  rtkBackProjectionImageFilter.h  rtkBackProjectionImageFilter.hxx  rtkBackProjectionImageFilter.txx  rtkBackwardDifferenceDivergenceImageFilter.h  rtkBackwardDifferenceDivergenceImageFilter.hxx  rtkBackwardDifferenceDivergenceImageFilter.txx  rtkBackwardDifferenceOperator.h  rtkBackwardDifferenceOperator.txx  rtkBinningImageFilter.cxx  rtkBinningImageFilter.h  rtkBioscanGeometryReader.cxx  rtkBioscanGeometryReader.h  rtkBlockDiagonalMatrixVectorMultiplyImageFilter.h  (+683 more)
examples/: CMakeLists.txt  README.md  index.md  index.rst
src/: CMakeLists.txt  itkRawImageIOUtilities.cxx  rtkBioscanGeometryReader.cxx  rtkBoxShape.cxx  rtkConditionalMedianImageFilter.cxx  rtkConvexShape.cxx  rtkCudaAverageOutOfROIImageFilter.cu  rtkCudaAverageOutOfROIImageFilter.cxx  rtkCudaBackProjectionImageFilter.cu  rtkCudaConjugateGradientImageFilter.cu  rtkCudaConjugateGradientImageFilter_3f.cu  rtkCudaConjugateGradientImageFilter_3f.cxx  rtkCudaConstantVolumeSeriesSource.cu  rtkCudaConstantVolumeSeriesSource.cxx  rtkCudaConstantVolumeSource.cu  rtkCudaConstantVolumeSource.cxx  rtkCudaCropImageFilter.cu  rtkCudaCropImageFilter.cxx  rtkCudaCyclicDeformationImageFilter.cu  rtkCudaCyclicDeformationImageFilter.cxx  rtkCudaDisplacedDetectorImageFilter.cu  rtkCudaDisplacedDetectorImageFilter.cxx  rtkCudaExternTemplates.cxx  rtkCudaFDKBackProjectionImageFilter.cu  rtkCudaFDKBackProjectionImageFilter.cxx  rtkCudaFDKConeBeamReconstructionFilter.cxx  rtkCudaFDKWeightProjectionFilter.cu  rtkCudaFDKWeightProjectionFilter.cxx  rtkCudaFFTConvolutionImageFilter.cu  rtkCudaFFTProjectionsConvolutionImageFilter.cu  rtkCudaFFTRampImageFilter.cxx  rtkCudaFirstOrderKernels.cu  rtkCudaForwardProjectionImageFilter.cu  rtkCudaForwardWarpImageFilter.cu  rtkCudaForwardWarpImageFilter.cxx  rtkCudaInterpolateImageFilter.cu  rtkCudaInterpolateImageFilter.cxx  rtkCudaIterativeFDKConeBeamReconstructionFilter.cxx  rtkCudaLagCorrectionImageFilter.cu  rtkCudaLagCorrectionImageFilter.cxx  (+83 more)
test/: CMakeLists.txt  rtkFirstReconstruction.py  rtkFourDTestHelper.h  rtkFourDTestHelper.hxx  rtkI0estimationtest.cxx  rtkMaximumIntensity.py  rtkOutputArgumentWrapping.py  rtkTest.h  rtkTestConfiguration.h.in  rtkTestReg23ProjectionGeometry.cxx  rtk_application_test.py  rtk_examples_test.py  rtk_maximum_intensity_test.py  rtk_output_argument_wrapping_test.py  rtkadjointoperatorstest.cxx  rtkadmmtotalvariationtest.cxx  rtkadmmwaveletstest.cxx  rtkamsterdamshroudtest.cxx  rtkapplicationtest.py  rtkargsinfomanagertest.cxx  rtkbinningtest.cxx  rtkbioscantest.cxx  rtkcheckimagequality.cxx  rtkconjugategradientreconstructiontest.cxx  rtkconjugategradienttest.cxx  rtkcroptest.cxx  rtkcudaraycastadjointoperatorstest.cxx  rtkcyclicdeformationtest.cxx  rtkcylindricaldetectorreconstructiontest.cxx  rtkdecomposespectralprojectionstest.cxx  rtkdigisenstest.cxx  rtkdisplaceddetectorcompcudatest.cxx  rtkdisplaceddetectorcompoffsettest.cxx  rtkdisplaceddetectortest.cxx  rtkdivergencetest.cxx  rtkdrawgeometricphantomtest.cxx  rtkedftest.cxx  rtkelektatest.cxx  rtkfbpparalleltest.cxx  rtkfdkprojweightcompcudatest.cxx  (+57 more)
testing/: CMakeLists.txt  rtkI0estimationtest.cxx  rtkRaycastInterpolatorForwardProjectionTest.cxx  rtkTest.h  rtkTestConfiguration.h.in  rtkTestReg23ProjectionGeometry.cxx  rtkbinningtest.cxx  (+78 more)
(+2357 files in other folders)
